# dioxus-tailwind-test

./: .gitattributes  .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
src/: main.rs
