[package]
name = "TailCurso2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["dioxus-web", "dioxus-router", "web", "router", "ssr", "fermi"] }
js-sys = { version="0.3.57" }
wasm-bindgen = "0.2.80"
wasm-logger = "0.2.0"
log = "0.4.17"
golde = { git="https://github.com/AOx0/golde" }
